--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>g3 architects</title>
     <link rel="stylesheet" href="style/architects.css">
 </head>
-<body>
+<body class="work-sans-worksansfont">
     <header>
-
+        <nav class="navber">
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
