--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
     <link rel="stylesheet" href="style/architects.css">
 </head>
 <body class="work-sans-worksansfont">
-    <header>
-        <nav class="navber">
+    <header class="header">
+        <nav class="navber displsy-flex max-width">
             <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links displsy-flex">            
+                <li class="nav-items"><a href="" class="nav-link">Home</a></li>
+                <li class="nav-items"><a href="" class="nav-link">About</a></li>
+                <li class="nav-items"><a href="" class="nav-link">Contact Us </a></li>
+                <li class="nav-items"><a href="" class="nav-link">Login</a></li>
+            </ul>
         </nav>
+        <div class="benner">
+            <h1 class="benner-title">Brand New 
+                Group of Architects 
+                </h1>
+                <p class="benner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button>Explore More</button>
+        </div>
     </header>
     <main>
 
