--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>g3 architects</title>
     <link rel="stylesheet" href="style/architects.css">
 </head>
-<body class="work-sans-worksansfont">
+<body class="work-sans-fonts">
     <header class="header">
         <nav class="navber displsy-flex max-width">
             <h3 class="brand">G3 Architects</h3>
@@ -18,15 +18,32 @@
             </ul>
         </nav>
         <div class="benner">
-            <h1 class="benner-title">Brand New 
-                Group of Architects 
-                </h1>
-                <p class="benner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button>Explore More</button>
+            <div class="benner-contant">
+                <h1 class="benner-title">Brand New 
+                    Group of Architects 
+                    </h1>
+                    <p class="benner-description dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="primary-btn">Explore More</button>
+            </div>
+                <img class="benner-image" src="images/banner.png" alt="">
         </div>
     </header>
     <main>
-
+        <section class="teams displsy-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="tow architect discussing about design">
+                <img src="images/team2.png" alt="tow architect discussing about design">
+                <img src="images/team3.png" alt="tow architect discussing about design">
+                <img src="images/team4.png" alt="tow architect discussing about design">
+            </div>
+            <div class="our-features">
+                <h class="features-title"><samp id="part-1">Quick list</samp><samp id="part-2"> of Our</samp> <samp id="part-3">Features</samp></h>
+                <p class="features-description dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+            </div>
+        </section>
+    
     </main>
     <footer>
 
