--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         </div>
     </header>
     <main>
+        <!-- tems section start -->
         <section class="teams displsy-flex">
-            <div class="team-img-container">
-                <img src="images/team1.png" alt="tow architect discussing about design">
-                <img src="images/team2.png" alt="tow architect discussing about design">
-                <img src="images/team3.png" alt="tow architect discussing about design">
-                <img src="images/team4.png" alt="tow architect discussing about design">
+            <div class="img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
             </div>
             <div class="our-features">
                 <h class="features-title"><samp id="part-1">Quick list</samp><samp id="part-2"> of Our</samp> <samp id="part-3">Features</samp></h>
@@ -43,6 +44,38 @@
             </div>
             </div>
         </section>
+        <!-- features will enjoy -->
+         <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+            </div>
+         </section>
+         <!-- some facts -->
+         <section class="some-facts">
+
+         </section>
+            
     
     </main>
     <footer>
