--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3 architects</title>
     <link rel="stylesheet" href="style/architects.css">
 </head>
+
 <body class="work-sans-fonts">
     <header class="header">
         <nav class="navber displsy-flex max-width">
             <h3 class="brand">G3 Architects</h3>
-            <ul class="nav-links displsy-flex">            
+            <ul class="nav-links displsy-flex">
                 <li class="nav-items"><a href="" class="nav-link">Home</a></li>
                 <li class="nav-items"><a href="" class="nav-link">About</a></li>
                 <li class="nav-items"><a href="" class="nav-link">Contact Us </a></li>
@@ -19,13 +21,15 @@
         </nav>
         <div class="benner">
             <div class="benner-contant">
-                <h1 class="benner-title">Brand New 
-                    Group of Architects 
-                    </h1>
-                    <p class="benner-description dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                    <button class="primary-btn">Explore More</button>
+                <h1 class="benner-title">Brand New
+                    Group of Architects
+                </h1>
+                <p class="benner-description dakr-3">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration in some form, by injected humour, or randomised words which
+                    don't look even</p>
+                <button class="primary-btn">Explore More</button>
             </div>
-                <img class="benner-image" src="images/banner.png" alt="">
+            <img class="benner-image" src="images/banner.png" alt="">
         </div>
     </header>
     <main>
@@ -38,48 +42,67 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="our-features">
-                <h class="features-title"><samp id="part-1">Quick list</samp><samp id="part-2"> of Our</samp> <samp id="part-3">Features</samp></h>
-                <p class="features-description dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h class="features-title"><samp id="part-1">Quick list</samp><samp id="part-2"> of Our</samp> <samp
+                        id="part-3">Features</samp></h>
+                <p class="features-description dakr-3">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form, by injected humour, or randomised words
+                    which don't look even</p>
                 <button class="primary-btn">Explore More</button>
             </div>
             </div>
         </section>
-        <!-- features will enjoy -->
-         <section>
+        <!-- some facts -->
+        <section>
             <h3 class="section-title">Some Facts</h3>
-            <p class="dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p class="dakr-3 fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration.</p>
             <div class="facts-container">
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card displsy-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card displsy-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card displsy-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card displsy-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                    </div>
                 </div>
             </div>
-         </section>
-         <!-- some facts -->
-         <section class="some-facts">
-
-         </section>
-            
-    
-    </main>
+            <!-- our sopnspors -->
+       <section class="our-sponspors">
+        <div class="sponspors-info">
+            <h3 class="section-title">Our Sponspors</h3>
+            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="sponspors-companies">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+        </div>
+       </section>
     <footer>
 
     </footer>
 </body>
+
 </html>
