--- a/index.html
+++ b/index.html
@@ -51,6 +51,44 @@
             </div>
             </div>
         </section>
+
+        <!-- features you will enjoy -->
+         <section class="features displsy-flex">
+            <div>
+                <h3 id="features-title" class="section-title">Features you will <br>love & enjoy</h3>
+                <p class="dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                <!-- features card container -->
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 
+            </div>
+
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="primary-btn">
+                    <span id="experience-years">10+Year</span>
+                    <br>
+
+                    <span>Experience</span>
+                </button>
+            </div>
+         </section>
+
         <!-- some facts -->
         <section>
             <h3 class="section-title">Some Facts</h3>
@@ -90,7 +128,7 @@
        <section class="our-sponspors">
         <div class="sponspors-info">
             <h3 class="section-title">Our Sponspors</h3>
-            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p class="dakr-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
         </div>
         <div class="sponspors-companies">
             <img src="images/sponsors/spotify.png" alt="">
