--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                  
             </div>
 
-            <div>
+            <div class="featured-architect">
                 <img src="images/architect.png" alt="">
                 <button id="experience-badge" class="primary-btn">
                     <span id="experience-years">10+Year</span>
